--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="wrap">
             <div id="text" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;">
                 <div id="code">
-                    <font color="pink"><span class="say">Lời Chúc Dành Cho Người Đẹp!</span><br>
+                    <font color="orange"><span class="say">Lời Chúc Dành Cho Người Đẹp!</span><br>
                         <span class="say">Chúc người đẹp một ngày 8/3 thật hạnh phúc, dịu dàng và tràn đầy yêu thương!
                             🌸</span><br>
                         <span class="say">Chúc người đẹp hãy luôn là chính mình và rực rỡ như những đóa hoa nha !
