--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                             💐</span><br>
                         <span class="say">Mong rằng người đẹp sẽ luôn mỉm cười và đón nhận những điều tốt đẹp nhất trong
                             cuộc sống! 💖</span><br>
-                        <span class="say"><span class="space"><img src="image/tym.png" alt=""><br>
+                        <div class="heart-container">
+                            <div class="heart"></div>
+                        </div>
+
 
                     </font>
                     </p>
