--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                             💐</span><br>
                         <span class="say">Mong rằng người đẹp sẽ luôn mỉm cười và đón nhận những điều tốt đẹp nhất trong
                             cuộc sống! 💖</span><br>
-                        <div class="heart-container">
-                            <div class="heart"></div>
-                        </div>
+                        <span class="say">Mãi keo mãi keo 💖</span><br>
 
 
                     </font>
